<resources>

    <string name="app_name">Movie Catalogue 5</string>

    <!--    Main-->
    <string name="menu_main_change_language">Change Language</string>
    <string name="menu_main_notification">Notification</string>

    <string name="movie_rating_adult">Adult</string>
    <string name="movie_rating_all_ages">All Ages</string>
    <string name="failed_to_retrieve_data">Failed to retrieve data, please check your connection</string>
    <string name="no_favored_movies">There are no movies you favored yet</string>
    <string name="no_favored_tvshow">There are no tv shows you favored yet</string>
    <string name="fragment_tvshows_search">Search TV show here</string>
    <string name="fragment_movies_search">Search movie here</string>
    <string name="notification_message_daily">We\'re missing you!</string>
    <string name="notification_message_release">%s has been released today!</string>

    <!--    Item Recycler Fragment Movies-->
    <string name="item_recycler_fragment_movies_text_genre">Genre</string>
    <string name="item_recycler_fragment_movies_text_popularity">Popularity</string>
    <string name="item_recycler_fragment_movies_text_release_date">Release Date</string>
    <string name="item_recycler_fragment_movies_text_rating">Rating</string>
    <string name="item_recycler_fragment_movies_button_see_more">See More</string>
    <string name="item_recycler_image_poster">Poster</string>

    <!--    Item Recycler Fragment TV Shows-->
    <string name="item_recycler_fragment_tvshows_text_genre">Genre</string>
    <string name="item_recycler_fragment_tvshows_text_language">Language</string>
    <string name="item_recycler_fragment_tvshows_text_first_air_date">First Air Date</string>
    <string name="item_recycler_fragment_tvshows_button_see_more">See More</string>
    <string name="item_recycler_fragment_tvshows_text_popularity">Popularity</string>

    <!--    Detail Movies TV Shows-->
    <string name="detail_movies_tvshows_button_buy_ticket">Buy Ticket</string>
    <string name="detail_movies_tvshows_button_watch_now">Watch Now</string>
    <string name="detail_movies_tvshows_text_overview">Overview</string>
    <string name="detail_movies_tvshows_image_poster">Poster</string>
    <string name="detail_movies_tvshows_toast_buy_ticket">You ordered \"%s\" ticket</string>
    <string name="detail_movies_tvshows_toast_watch_now">Enjoy watching</string>
    <string name="menu_detail_movie_tvshow_favorite">Favorite</string>

    <!--    View Pager Adapter-->
    <string name="view_pager_adapter_favorite_movies">Movies</string>
    <string name="view_pager_adapter_favorite_tv_shows">TV Shows</string>
    <string name="menu_main_bottom_navigation_movies">Movies</string>
    <string name="menu_main_bottom_navigation_tv_shows">TV Shows</string>
    <string name="menu_main_bottom_navigation_favorite">Favorite</string>

    <!--    Toast-->
    <string name="toast_movie_unfavored">This movie DELETED from your favored list</string>
    <string name="toast_tvshow_unfavored">This TV show DELETED from your favored list</string>
    <string name="toast_movie_favored">This movie ADDED to your favored list</string>
    <string name="toast_tvshow_favored">This TV show ADDED to your favored list</string>

    <!--    Preference-->
    <string name="preference_switch_preference_release_reminder">Release Reminder</string>
    <string name="preference_switch_preference_daily_reminder">Daily Reminder</string>
    <string name="preference_switch_preference_daily_reminder_summary">Reminder to check this app</string>
    <string name="preference_switch_preference_release_reminder_summary">Reminder showing movies that released today</string>
    <string name="preference_key_release_reminder">release_reminder</string>
    <string name="preference_key_daily_reminder">daily_reminder</string>

</resources>
